[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["bgseong <qnrms2898@naver.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
SQLAlchemy = "^1.4.39"
psycopg2-binary = "^2.9.3"
psycopg2 = "^2.9.3"
alembic = "^1.8.1"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
